--- a/src/ChickFilA.form
+++ b/src/ChickFilA.form
@@ -76,7 +76,8 @@
           <component id="5495e" class="javax.swing.JTextArea" binding="orders">
             <constraints/>
             <properties>
-              <font name="Javanese Text" size="14" style="1"/>
+              <font name="Javanese Text" size="18" style="2"/>
+              <foreground color="-4474061"/>
             </properties>
           </component>
         </children>
