--- a/src/ChickFilA.form
+++ b/src/ChickFilA.form
@@ -26,6 +26,7 @@
           <grid row="5" column="0" row-span="9" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1314573"/>
           <font name="Javanese Text" size="20" style="1"/>
           <hideActionText value="false"/>
           <text value="Order"/>
@@ -45,6 +46,7 @@
         </constraints>
         <properties>
           <font name="NSimSun" size="14" style="1"/>
+          <foreground color="-4517087"/>
           <text value="Return to Main Menu"/>
         </properties>
       </component>
@@ -54,6 +56,7 @@
         </constraints>
         <properties>
           <font name="NSimSun" size="14" style="1"/>
+          <foreground color="-4516585"/>
           <text value="Finish Order"/>
         </properties>
       </component>
@@ -63,6 +66,7 @@
         </constraints>
         <properties>
           <font name="NSimSun" size="14" style="1"/>
+          <foreground color="-4510939"/>
           <text value="Submit Request"/>
         </properties>
       </component>
@@ -76,8 +80,11 @@
           <component id="5495e" class="javax.swing.JTextArea" binding="orders">
             <constraints/>
             <properties>
+              <background color="-16719912"/>
               <font name="Javanese Text" size="18" style="2"/>
-              <foreground color="-4474061"/>
+              <foreground color="-4514537"/>
+              <lineWrap value="false"/>
+              <wrapStyleWord value="false"/>
             </properties>
           </component>
         </children>
